feat: convert to monorepo with all apps integrated
✨ Major architecture change:
- Moved QR generator, Instagram analyzer, and DrinkMaster to apps/ folder
- Created custom build system for handling different app types
- Updated Vercel config to use routes instead of rewrites
- Added comprehensive monorepo management scripts
- Fixed asset path issues by serving apps locally instead of via rewrites

🏗️ New structure:
- apps/qr/ (static HTML/CSS/JS app)
- apps/unfollow/ (Vite + TypeScript app)
- apps/drinkmaster/ (Vite + React app)
- scripts/build.js (intelligent build system)

🚀 Benefits:
- No more asset path issues
- Unified deployment
- Better development experience
- Easier app management

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,13 @@ Thumbs.db
 # Build output
 dist/
 build/
+
+# App-specific build outputs
+apps/*/dist/
+apps/*/build/
+apps/*/node_modules/
+
+# App-specific files
+apps/*/.env
+apps/*/.vercel/
+apps/*/.DS_Store
