--- a/package.json
+++ b/package.json
@@ -6,7 +6,17 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "node scripts/build.js",
+    "build:hub": "vite build",
+    "build:apps": "npm run build:qr && npm run build:unfollow && npm run build:drinkmaster",
+    "build:qr": "cd apps/qr && npm run build",
+    "build:unfollow": "cd apps/unfollow && npm run build",
+    "build:drinkmaster": "cd apps/drinkmaster && npm run build",
+    "install:all": "npm install && npm run install:apps",
+    "install:apps": "cd apps/qr && npm install && cd ../unfollow && npm install && cd ../drinkmaster && npm install",
+    "dev:qr": "cd apps/qr && npm run dev",
+    "dev:unfollow": "cd apps/unfollow && npm run dev",
+    "dev:drinkmaster": "cd apps/drinkmaster && npm run dev",
     "preview": "vite preview",
     "format": "prettier --write \"**/*.{js,css,html,md}\""
   },
