fix: include dist builds for Vercel deployment
🔧 Critical deployment fix:
- Updated .gitignore to include dist/ folder in git
- Pre-built all apps and included static files
- Fixed vercel.json routing configuration
- All apps now deployable as static files

📁 Included builds:
- dist/ (hub)
- dist/apps/qr/ (QR generator)
- dist/apps/unfollow/ (Instagram analyzer)
- dist/apps/drinkmaster/ (party games)

✅ Vercel should now serve all apps correctly without build issues

--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+# dist - commented out for Vercel deployment
 
 # Gatsby files
 .cache/
@@ -138,8 +138,8 @@ Thumbs.db
 # Vercel
 .vercel
 
-# Build output (but keep apps builds for Vercel)
-# dist/
+# Build output (include dist for Vercel deployment)
+# dist/ - commented out so Vercel can serve pre-built files
 build/
 
 # App-specific build outputs (keep for deployment)
