fix: update build process and remove dist/ from git tracking
- Update main build script to use node scripts/build.js (handles all apps correctly)
- Remove dist/ files from git tracking - let Vercel build from scratch
- Clean up backup folders and temp migration files
- Fix package.json syntax error
- This should resolve Vercel deployment issues

The build process now:
1. Builds hub with Vite
2. Copies QR static files (frontend/ → dist/apps/qr/)
3. Installs deps and builds unfollow (Vite + TS)
4. Installs deps and builds drinkmaster (Vite + React)

All apps now use relative paths (base: './') for proper subdirectory serving.

--- a/.gitignore
+++ b/.gitignore
@@ -138,8 +138,8 @@ Thumbs.db
 # Vercel
 .vercel
 
-# Build output (include dist for Vercel deployment)
-# dist/ - commented out so Vercel can serve pre-built files
+# Build output (exclude dist - let Vercel build it)
+dist/
 build/
 
 # App-specific build outputs (keep for deployment)
