--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,5 @@
 {
-  "rewrites": [
-    {
-      "source": "/qr",
-      "destination": "/apps/qr/index.html"
-    },
-    {
-      "source": "/qr/(.*)",
-      "destination": "/apps/qr/$1"
-    },
-    {
-      "source": "/unfollow",
-      "destination": "/apps/unfollow/index.html"
-    },
-    {
-      "source": "/unfollow/(.*)",
-      "destination": "/apps/unfollow/$1"
-    },
-    {
-      "source": "/drinkmaster",
-      "destination": "/apps/drinkmaster/index.html"
-    },
-    {
-      "source": "/drinkmaster/(.*)",
-      "destination": "/apps/drinkmaster/$1"
-    }
-  ],
+  "cleanUrls": true,
   "headers": [
     {
       "source": "/(.*)",
